# kodi-kino.pub

./: .gitignore  Makefile  README.md  addon.xml  api-test.py  default.py  pyproject.toml
lib/: __init__.py  api.py  router.py  settings.py  ui.py
resources/: settings.xml
resources/language/en/: strings.po
resources/language/ru/: strings.po
resources/language/uk/: strings.po
scripts/: build_addon.py
tests/: conftest.py  test_api.py
